--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -18,7 +18,7 @@
       <div class="ui right floated black launch button">
         <i class="list layout icon"></i> Menu
       </div>
-      <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="icon icon-gear"></i></a>
+      <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-gear"></i></a>
       
       <section class="inner-wrapper <%= 'single-sidebar' unless content_for?(:admin_sidebar) %>">
         <div id="flash_container">
