--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -16,7 +16,7 @@
 
     <section id="wrapper" class="pusher">
       <div class="ui right floated black launch button">
-        <i class="list layout icon"></i> Menu
+        <i class="list layout icon"></i>
       </div>
       <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-gear"></i></a>
       
