--- a/app/views/refinery/admin/pages/edit.html.erb
+++ b/app/views/refinery/admin/pages/edit.html.erb
@@ -3,6 +3,5 @@
 <% end %>
 
 <% content_for :admin_page_preview do %>
-  <%= render '/refinery/pages/show' %>
+  <%= render '/refinery/pages/partials/show' %>
 <% end %>
-
