--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -102,8 +102,15 @@
   <p>Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           
-  <div class="new-module clear">
-    <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
+  <div class="glass-module new-module clear">
+    <a id="glass-change-module" href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
+    <p contenteditable="true">Lorum Ipsum</p>
+  </div>
+
+  <div id="glass-templates" style="display: none;">
+    <div class="glass-module new-module clear blank">
+      <p contenteditable="true"></p>
+    </div>
   </div>
   
   <div class="new-module media-chooser clear">
@@ -131,28 +138,22 @@
 
 <% content_for :javascripts do %>
   <script>
-    $(document).ready(function(){
-      page_options.init(
-        <%= Refinery::Pages.new_page_parts.to_s %>
-        , "<%= refinery.new_admin_page_part_path %>"
-        , "<%= refinery.admin_page_parts_path %>"
-      );
-
-      $("#preview-button").click(function(e) {
-        var form = $(this).parents('form');
-        var prev_url = form.attr('action');
-        var prev_target = form.attr('target');
-        form.attr({
-          'action': '<%= @page.persisted? ? refinery.pages_admin_preview_page_path(@page.nested_url) : refinery.pages_admin_preview_pages_path %>'
-          , 'target': '_blank'
-        });
-        form.submit();
-        form.attr({
-          'action': prev_url
-          , 'target': prev_target
-        });
-        e.preventDefault();
-      });
+    $(document).on('content-ready', function (e, element) {
+      var handle_enter = function(e) {
+        if($(this).find('p').is(":focus") && e.which == 13) {
+          e.preventDefault();
+          var $new_module = $('#glass-templates .glass-module.blank').clone();
+          $new_module.removeClass('blank');
+          $new_module.prepend($('#glass-change-module'));
+          $(this).after($new_module);
+          $new_module.find('p').first().focus();
+          $(document).trigger('content-ready', $new_module[0]);
+        }
+      }
+      $(element).find('.glass-module').keypress(handle_enter);
+      if ($(element).hasClass('glass-module')) {
+        $(element).keypress(handle_enter);
+      }
     });
   </script>
 <% end %>
