--- a/app/assets/stylesheets/partials/_icons-glass.scss
+++ b/app/assets/stylesheets/partials/_icons-glass.scss
@@ -115,3 +115,39 @@
 .gcicon-down-lg:before {
   content: "M";
 }
+.gcicon-bars:before {
+  content: "N";
+}
+.gcicon-gears:before {
+  content: "O";
+}
+.gcicon-sort-alpha-two:before {
+  content: "P";
+}
+.gcicon-sort-alpha:before {
+  content: "Q";
+}
+.gcicon-sort:before {
+  content: "R";
+}
+.gcicon-sort-two:before {
+  content: "S";
+}
+.gcicon-sort-numeric-two:before {
+  content: "T";
+}
+.gcicon-sort-numeric:before {
+  content: "U";
+}
+.gcicon-caret-up-down:before {
+  content: "V";
+}
+.gcicon-caret-down:before {
+  content: "W";
+}
+.gcicon-caret-up:before {
+  content: "X";
+}
+.gcicon-filter:before {
+  content: "Y";
+}
