--- a/app/views/refinery/admin/pages/_actions.html.erb
+++ b/app/views/refinery/admin/pages/_actions.html.erb
@@ -1,10 +1,11 @@
-<%= render '/refinery/admin/search', :url => refinery.admin_pages_path %>
+<!-- # <%= render '/refinery/admin/search', :url => refinery.admin_pages_path %> -->
 <% content_for :admin_submenu do %>
 <ul id="actions" class="list-unstyled active">
   <li>
     <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe + t('.create_new_page'), refinery.new_admin_page_path %>
   </li>
-  <% if @pages.many? and !searching? %>
+  <!--
+<% if @pages.many? and !searching? %>
     <li>
       <%= link_to '<i class="gcicon gcicon-reorder"></i>'.html_safe + t('.reorder_pages'),
                   refinery.admin_pages_path,
@@ -16,5 +17,6 @@
                   :style => "display: none;" %>
     </li>
   <% end %>
+-->
 </ul>
 <% end %>
