--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -1,10 +1,13 @@
 <li id="<%= dom_id(page) -%>" class="page-listing">
-  <div class="page-row">
+  <div class="page-row" role="tab" id="parent-1">
     <% if page.children.present? %>
       <% if Refinery::Pages.auto_expand_admin_tree %>
-        <i class="icon gcicon gcicon-folder-open expanded toggle"></i>
+        <a class="child-toggle" data-toggle="collapse" href="#child-pages" aria-expanded="false" aria-controls="child-pages">
+          <i class="gcicon gcicon-folder-open"></i>
+          <i class="gcicon gcicon-folder"></i>
+        </a>
       <% else %>
-        <i class="icon gcicon gcicon-folder toggle"></i>
+        <i class="gcicon gcicon-folder toggle"></i>
       <% end %>
     <% else %>
       <i class="gcicon gcicon-file"></i>
@@ -67,9 +70,9 @@
     
 
   
-  <!-- This needs to be one line of code as the css looks for the empty state. -->
-
-  <ul class='nested list-unstyled' data-ajax-content="<%= refinery.admin_children_pages_path(page.nested_url) %>"><%= render(:partial => 'page', :collection => page.children) if Refinery::Pages.auto_expand_admin_tree %></ul>
-
+  <!-- This needs to be one line of code as the css looks for the empty state. Spaces interfere. -->
+  <div id="child-pages" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="parent-1">
+    <ul class='nested list-unstyled' data-ajax-content="<%= refinery.admin_children_pages_path(page.nested_url) %>"><%= render(:partial => 'page', :collection => page.children) if Refinery::Pages.auto_expand_admin_tree %></ul>
+  </div>
 
 </li>
